--- a/GrupoPV_ProjectFinal/src/main/resources/application.properties
+++ b/GrupoPV_ProjectFinal/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 # url para la conexión a la base de datos Mysql
-spring.datasource.url = jdbc:mysql://localhost:3306/mybd?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/pvisual?serverTimezone=UTC
 
 # usuario que se conecta a la bd
 spring.datasource.username = root
 # password del usuario que se conecta a la bd
-spring.datasource.password = 1234
+spring.datasource.password = andrea629
 
 #log para mostrar las sentencias sql que ejecuta jpa
 spring.jpa.show-sql = true
@@ -19,4 +19,5 @@ spring.jpa.generate-ddl = true
 #permite realizar la creación eliminación de tablas
 spring.jpa.hibernate.ddl-auto = create-drop
 #spring.jpa.hibernate.ddl-auto = update
+#spring.servlet.multipart.max_file-size=5MB
 
