--- a/GrupoPV_ProjectFinal/src/main/resources/application.properties
+++ b/GrupoPV_ProjectFinal/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # url para la conexión a la base de datos Mysql
-spring.datasource.url = jdbc:mysql://localhost:3306/mybd?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/proyecto?serverTimezone=UTC
 
 # usuario que se conecta a la bd
 spring.datasource.username = root
